Added: ignore sublime editor files

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ SwordsmanAndSpiders/proj.android/
 SwordsmanAndSpiders/proj.ios_mac/
 SwordsmanAndSpiders/proj.linux/
 SwordsmanAndSpiders/proj.win32/
-
+swordsman_and_spiders.sublime-project
+swordsman_and_spiders.sublime-workspace
